--- a/src/utils/css/components/global.css
+++ b/src/utils/css/components/global.css
@@ -256,11 +256,11 @@ html {
     overflow-y: scroll;
     font-size: 62.5%;
 
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: white;
 }
 body {
     overflow-x: hidden;
-    color: color(var(--color-base) l(+20%));
+    color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.5rem;
     line-height: 1.6em;
@@ -277,7 +277,7 @@ body {
 
 ::selection {
     text-shadow: none;
-    background: #cbeafb;
+    background: #7304f2;
 }
 
 hr {
@@ -342,7 +342,7 @@ a {
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
     transition: 0.2s ease;
 }
 
@@ -372,6 +372,7 @@ h1 {
 h2 {
     margin: 1.5em 0 0.5em 0;
     font-size: 4rem;
+    
 }
 @media (max-width: 500px) {
     h2 {
