--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -98,7 +98,7 @@ body {
   display: flex;
   margin: 0;
   margin-bottom: 60px;
-  padding: 0 20px;
+  padding: 0 80px;
   /* height: 800px; */
   font-size: 7rem;
   background-image: linear-gradient(
@@ -110,7 +110,7 @@ body {
   );
   -webkit-background-clip: text;
   background-clip: text;
-  color: transparent;
+  color: white;
 
   background-size: 300%;
   background-position: -200%;
