--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -536,7 +536,7 @@ body {
 
 .post-content-title {
   margin: 0 0 3vw;
-  color: #1d2122;
+  color: #131f46;
   text-align: center;
 }
 
@@ -544,7 +544,7 @@ body {
   margin: -2vw 0 3vw;
   font-size: 2.2rem;
   line-height: 1.6em;
-  color: #1d2122;
+  color: #131f46;
   text-align: center;
   opacity: 0.5;
 }
