--- a/src/utils/css/vars.css
+++ b/src/utils/css/vars.css
@@ -6,8 +6,8 @@
 :root {
 
     /* Colours */
-    --color-primary: #3eb0ef;
-    --color-base: #131313;
+    --color-primary: #3eb0ef; 
+    --color-base: #131f46;
     --color-border: #ddd;
     --color-bg: #f8f8f8;
 
